# light-redirect

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs
